# hub-nfts-solana

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: cargo.yml  cargo_test.yml  release.yml
ci/: get-protoc.sh
consumer/: Cargo.toml  proto.toml
consumer/src/: asset_api.rs  backend.rs  events.rs  handlers.rs  import.rs  lib.rs  main.rs  metrics.rs  solana.rs  solana_compressed.rs
consumer/src/events/: failures.rs  mod.rs  nfts.rs  treasury.rs
core/: Cargo.toml  proto.toml
core/src/: certified_collections.rs  collection_mints.rs  collections.rs  compression_leafs.rs  db.rs  editions.rs  lib.rs
core/tests/: mock.rs
entity/: Cargo.toml
entity/src/: certified_collections.rs  collection_mints.rs  collections.rs  compression_leafs.rs  editions.rs  lib.rs  mod.rs  prelude.rs  update_revisions.rs
indexer/: Cargo.toml
indexer/src/: connector.rs  handler.rs  lib.rs  main.rs  processor.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230529_134752_create_collections_table.rs  m20230530_131917_create_collection_mints_table.rs  m20230614_132203_make_associated_token_account_nullable_on_collection_mints.rs  m20230616_091724_backfill_associated_token_account_on_collection_mints.rs  m20230717_124019_rename_collections_table_to_editions.rs  m20230717_144205_create_certified_collections_table.rs  m20230721_135829_set_default_collection_and_mint_id.rs  m20230725_143421_add_compression_leafs_table.rs  m20230807_135202_update_revisions.rs
