# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["consumer", "core", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
holaplex-hub-nfts-solana-core = { path = "core" }
holaplex-hub-nfts-solana-entity = { path = "entity" }