[package]
name = "holaplex-hub-nfts-solana"
version = "0.1.0"
edition = "2021"
keywords = ["solana", "hub", "holaplex", "nfts"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts solana service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-solana"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]

[dependencies]
bincode = "1.3.3"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
solana-program = "1.14.8"
solana-client = "1.14.8"
spl-token = "3.5.0"
solana-sdk = "1.14.8"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = "1.8.3"
holaplex-hub-nfts-solana-core = { path = "../core" }
holaplex-hub-nfts-solana-entity = { path = "../entity" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka"]