[package]
name = "holaplex-hub-nfts-solana"
version = "0.1.0"
edition = "2021"
keywords = ["solana", "hub", "holaplex", "nfts"]
publish = false
authors = ["Holaplex <engineering@holaplex.com>"]
description = "Holaplex Hub nfts solana service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-solana"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]

[dependencies]
anchor-lang = "0.26.0"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
solana-program = "1.14.21"
solana-client = "1.14.21"
solana-transaction-status = "1.14.21"
spl-account-compression = "0.1.10"
spl-noop = "0.1.3"
spl-token = "3.5.0"
solana-sdk = "1.14.21"
spl-associated-token-account = "1.1.2"
mpl-bubblegum = "0.7.0"
mpl-token-metadata = "1.8.3"
holaplex-hub-nfts-solana-core = { path = "../core" }
holaplex-hub-nfts-solana-entity = { path = "../entity" }
jsonrpsee = { version = "0.19.0", features = ["macros", "http-client"] }
rand = "0.8.5"
poem = { version = "1.3.50", features = ["anyhow", "test"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.5.5"
branch = "stable"
git = "https://github.com/holaplex/hub-core"
features = ["jsonrpsee-core", "kafka", "kafka_internal", "sea-orm", "solana", "metrics"]
