[package]
name = "holaplex-hub-nfts-solana-core"
version = "0.1.0"
edition = "2021"
keywords = ["solana", "hub", "holaplex", "nfts"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts solana service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-solana"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
holaplex-hub-nfts-solana-entity = { path = "../entity" }
sea-orm = { version = "^0.10.0", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = []
