[package]
name = "holaplex-hub-nfts-solana-core"
version = "0.1.0"
edition = "2021"
keywords = ["solana", "hub", "holaplex", "nfts"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts solana service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-solana"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[dependencies]
holaplex-hub-nfts-solana-entity = { path = "../entity" }
sea-orm = { version = "0.11.3", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
prost = "0.11.9"
mpl-token-metadata = "1.8.3"
mpl-bubblegum = "0.7.0"

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
