[package]
name = "holaplex-hub-nfts-solana-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.11.3", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
