[package]
name = "solana-indexer"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub nfts service"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
sea-orm = { version = "^0.11.0", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
futures = "0.3.24"
hex = "0.4.3"
solana-sdk = "1.14"
mpl-bubblegum = "0.7.0"
solana-program = "1.14"
anchor-lang = "0.26.0"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v1.7.1+solana.1.16.1" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v1.7.1+solana.1.16.1" }
dashmap = "5.4.0"
spl-token = "=3.5.0"
solana-client = "1.14"
backoff = { version = "0.4.0", features = ["tokio"] }
crossbeam = "0.8.2"

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.5.6"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka_internal"]

[dependencies.holaplex-hub-nfts-solana-core]
path = "../core"

[dependencies.holaplex-hub-nfts-solana-entity]
path = "../entity"
